feat(rule-audit): add tag pattern search and optimize audit log queries with summary projection
- Add findIdsByTagPattern() method to ProtocolHandler interface for protocol-agnostic tag-based rule lookup
- Implement findIdsByTagPattern() in HttpProtocolHandler and JmsProtocolHandler with repository delegation
- Add findIdsByTagPattern() queries to HttpRuleRepository and JmsRuleRepository using LIKE pattern matching
- Add ProtocolHandlerRegistry.findIdsByTagPattern() to aggregate results across all protocol handlers
- Introduce summary projection queries (findSummaryByRuleId, findAllSummary) in RuleAuditLogRepository that exclude LOB fields (beforeJson/afterJson) to reduce heap memory usage
- Update RuleAuditService to use summary projections instead of full entity loading, mapping Object[] results to RuleAuditLog
- Add mapSummaryRow() helper to convert projection results [id, ruleId, action, operator, timestamp] to domain objects
- Update audit log service methods (getAuditLogs, getAllAuditLogs) to consume optimized queries
- Add integration and unit tests for new tag pattern search and audit log projection functionality
- Avoids full table scans and reduces memory overhead for large audit log datasets